fix .spacing for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,8 @@ a:hover
 }
 
 .spacing {
-    margin-right:90px;
-    margin-left:90px;
+    margin-right:12.5%;
+    margin-left:12.5%;
 }
 
 .padding {
